# cours_gpu

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakePresets.json  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  add.cu  add.h  build.sh  check.cu  cmake_install.cmake  cours_gpu.sln  cours_gpu.vcxproj  cours_gpu.vcxproj.filters  coursgpu.sln  gpu.vcxproj  gpu.vcxproj.filters  main  main.cpp
Debug/: gpu.exp  gpu.lib
RK45/: CMakeLists.txt  rk45.cu
ex1/: CMakeLists.txt  ex1.cu  gpu_ex1.cpp  matmul.cpp  matmul.cu  matmul.h
ex2/: CMakeLists.txt  stream.cpp  stream.cu  stream.h
ex3/: CMakeLists.txt  reduction.cpp  reduction.cu
ex4/: CMakeLists.txt  managed.cu
gpu.dir/Debug/: add.cu.cache  check.cu-963027182.deps  check.cu.cache  gpu.exe.recipe  gpu.ilk
gpu.dir/Debug/gpu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  gpu.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
sort/: CMakeLists.txt  sort.cu  sort.h
td1/: CMakeLists.txt  add.cu  check.cu  check.h
tp/: CMakeLists.txt  tp  tp.cu
x64/Debug/: add.cu-1509274483.deps  add.cu.cache  check.cu.cache  vc143.idb
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Debug/cours_gpu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog
