cmake_minimum_required(VERSION 3.10)
#set(CMAKE_CUDA_FLAGS -allow-unsupported-compiler)
project(coursgpu LANGUAGES CXX CUDA)
include_directories(${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
add_subdirectory(ex1)
add_subdirectory(ex2)
add_subdirectory(ex3)
add_subdirectory(ex4)
#add_subdirectory(RK45)
add_subdirectory(tp)
add_subdirectory(td1)